force-app/main/default/objects/ClaimReductionCalculation__mdt/ClaimReductionCalculation__mdt.object-meta.xml
<CustomObject>
    <label>ClaimReductionCalculation</label>
    <pluralLabel>ClaimReductionCalculations</pluralLabel>
</CustomObject>