force-app/main/default/objects/ClaimReductionCalculation__mdt/fields/ClaimType__c.field-meta.xml
<CustomField>
    <fullName>ClaimType__c</fullName>
    <label>Claim Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>