force-app/main/default/objects/ClaimReductionCalculation__mdt/fields/FirstWorkCeasedDateThreshold__c.field-meta.xml
<CustomField>
    <fullName>FirstWorkCeasedDateThreshold__c</fullName>
    <label>FirstWorkCeasedDateThreshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>