force-app/main/default/objects/ClaimReductionCalculation__mdt/fields/RTW_Status__c.field-meta.xml
<CustomField>
    <fullName>RTW_Status__c</fullName>
    <label>RTW Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>