force-app/main/default/objects/ClaimReductionCalculation__mdt/fields/StandardTimeLossValue__c.field-meta.xml
<CustomField>
    <fullName>StandardTimeLossValue__c</fullName>
    <label>StandardTimeLossValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>