force-app/main/default/objects/ClaimReductionCalculation__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>provide the list as they should appear in the query</inlineHelpText>
    <label>Status List</label>
    <type>TextArea</type>
</CustomField>